[gd_scene load_steps=3 format=2]

[ext_resource path="res://common/world/coin_spawner/coin_spawner.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 44.922

[node name="CoinSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Coin" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin"]
shape = SubResource( 1 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="body_entered" from="Coin" to="." method="_on_Coin_body_entered"]
